@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011, 2020 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2011, 2021 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -43,10 +43,9 @@ public class ConcreteSubclassFactory {
      * Creates a new ConcreteSubclass object.
      *
      * @return the object
-     * @throws InstantiationException the instantiation exception
-     * @throws IllegalAccessException the illegal access exception
+     * @throws ReflectiveOperationException for errors
      */
-    public Object createConcreteSubclass() throws InstantiationException, IllegalAccessException {
-        return clazz.newInstance();
+    public Object createConcreteSubclass() throws ReflectiveOperationException {
+        return clazz.getConstructor().newInstance();
     }
 }
